Fixed description overflow

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -99,6 +99,7 @@ rect {
   padding: 2em;
   background-color: #576268;
   border-bottom: 2px solid black;
+  width: auto;
 
   p {
     margin: 0;
